# beewm

./: Cargo.toml  LICENSE  README.md
beewm/: Cargo.toml
beewm-core/: Cargo.toml
beewm-core/src/: action.rs  config.rs  event.rs  handler.rs  lib.rs  manager.rs  state.rs
beewm-core/src/layout/: dwindle.rs  master_stack.rs  mod.rs
beewm-core/src/model/: mod.rs  screen.rs  window.rs  workspace.rs
beewm-wayland/: Cargo.toml
beewm-wayland/src/: cursor.rs  handlers.rs  input.rs  lib.rs  render.rs  state.rs  udev.rs  winit.rs
beewm-x11/: Cargo.toml
beewm-x11/src/: actions.rs  atoms.rs  connection.rs  event_translate.rs  lib.rs
beewm/src/: main.rs
src/: lib.rs  main.rs
src/compositor/: commands.rs  cursor.rs  feedback.rs  handlers.rs  input.rs  ipc.rs  layering.rs  mod.rs  render.rs  screencopy.rs  types.rs
src/compositor/backend/: mod.rs  udev.rs  winit.rs
src/compositor/input/: grab.rs  keyboard.rs  mod.rs  pointer.rs
src/compositor/state/: cursor.rs  decorations.rs  focus.rs  mod.rs  popup.rs  tiling.rs  window_lifecycle.rs  workspace.rs
src/config/: mod.rs  parser.rs
src/layout/: dwindle.rs  dwindle_tree.rs  manager.rs  master_stack.rs  mod.rs
src/model/: workspace.rs
src/xwayland/: backend.rs  mod.rs  state.rs  wm.rs
tests/: compositor_helpers.rs  config.rs  layouts.rs  workspace.rs
