[package]
name = "beewm"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
smithay = { version = "0.7", default-features = false, features = [
    "backend_winit",
    "backend_drm",
    "backend_gbm",
    "backend_libinput",
    "backend_udev",
    "backend_session_libseat",
    "desktop",
    "wayland_frontend",
    "renderer_glow",
    "xwayland",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
xcursor = "0.3"
