[package]
name = "beewm-wayland"
version = "0.1.0"
edition = "2021"

[dependencies]
beewm-core = { path = "../beewm-core" }
smithay = { version = "0.7", default-features = false, features = [
    "backend_winit",
    "backend_drm",
    "backend_gbm",
    "backend_libinput",
    "backend_udev",
    "backend_session_libseat",
    "desktop",
    "wayland_frontend",
    "renderer_glow",
] }
tracing = "0.1"
